User interface changed

--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin page</title>
 </head>
-<body>
+<body class="AdminPageBody">
     <nav class="w-100 my-3">
         <ul class="nav nav-pills justify-content-center">
             <li class="nav-item">
@@ -46,7 +46,7 @@
           </ul>
     </nav>
     <div>
-        <div class="d-flex pt-3 justify-content-center">
+        <div class="pt-3 justify-content-center">
             <div class="text-center">
                 <h2>Пользователи</h2>
                 <button class="getData mt-3 btn btn-outline-primary" onclick="getData()">Получить пользователей</button>
