--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
                     <input type="text" id="login" name="login" class="login form-control mb-2">
                     <div id="loginLabel"></div>
                     <label class="form-label" for="password">Пароль</label>
-                    <input type="text" id="password" name="password" class="password  form-control">
+                    <input type="password" id="password" name="password" class="password  form-control">
                     <div id="passwordLabel"></div>
                     <button class="btn btn-primary btn-block mt-2" onclick="login()">Войти</button>
                 </div>
