--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
 </head>
-<body>
+<body class="ProfilePageBody">
     <nav class="w-100 my-3">
         <ul class="nav nav-pills justify-content-center">
             <li class="nav-item">
