--- a/src/main/resources/templates/proverbs.html
+++ b/src/main/resources/templates/proverbs.html
@@ -82,7 +82,7 @@
     <div class="d-flex pt-3 justify-content-center">
         <div class="text-center">
             <h2>Пословицы</h2>
-            <button class="getData my-2 btn btn-outline-primary" onclick="getData()">Показать пословицы</button>
+            <button class="getData my-2 btn btn-outline-primary" onclick="getProverbs()">Показать пословицы</button>
         </div>
         <div class="d-flex justify-content-center">
             <div class="tableProverbs" style="margin: 15px;"></div>
