Proverb page update

--- a/src/main/resources/templates/proverbs.html
+++ b/src/main/resources/templates/proverbs.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </div>
-    <div class="d-flex pt-3 justify-content-center">
+    <div class="pt-3 justify-content-center">
         <div class="text-center">
             <h2>Пословицы</h2>
             <button class="getData my-2 btn btn-outline-primary" onclick="getProverbs()">Показать пословицы</button>
