Update user interface

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/img.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
@@ -46,8 +47,41 @@
           </ul>
     </nav>
     <div>
-        <div class="d-flex pt-3 justify-content-center">
-            <h2>Пословицы</h2>
+        <div class="pt-3 justify-content-center container" style="width: 560px">
+            <h2 class="text-center my-4">Русские пословицы в современной  коммуникации</h2>
+            <div class="d-flex justify-content-center mb-4">
+                <img style="" src="/img_1.png">
+            </div>
+            <p style="text-indent: 50px;">В современном обществе, охваченном цифровой технологией и быстрыми темпами развития, сохранение культурных и духовных ценностей становится все более актуальной задачей. Одним из важных аспектов этой проблематики является использование наследия народной мудрости и традиций в современной коммуникации. Русские пословицы, как носители народной мудрости, представляют собой уникальный ресурс для понимания и интерпретации современных общественных явлений и деловых ситуаций.</p>
+            <p style="text-indent: 50px;"><strong>Целью</strong> этого сайта является исследования основных тенденции и области применения русских пословиц в общений.</p>
+            <p style="font-size: 20px">Роль использования русских пословиц в современной  коммуникации:</p>
+            <ul>
+                <li>Эмоциональная выразительность</li>
+                <li>Универсальность и доступность</li>
+                <li>Культурная идентичность</li>
+                <li>Метод обучения и воспитания</li>
+                <li>Создание образов</li>
+                <li>Использование в рекламе и маркетинге</li>
+                <li>Примеры в литературе и искусстве</li>
+            </ul>
+            <p>Пройдите <a href="https://forms.gle/gv4Eyi75zVxjEQQj9" target="_blank">опрос</a> о роли пословиц в современном обществе.</p>
+            <hr>
+            <strong class="mt-4">СПИСОК ИСПОЛЬЗОВАННОЙ ЛИТЕРАТУРЫ</strong>
+            <ol class="mt-4">
+                <li>Байрамова, Л.К. (2014). Пословицы в «Аксиологическом
+                    фразеологическом словаре русского языка: словаре ценностей и антиценностей». Вестник Новгородского Государственного Университета, (77).
+                </li>
+                <li>Баско, Н.В. (2014). Русские пословицы и поговорки о родине как отражение национальной ментальности (лингвистический и методический аспекты). Вестник Новгородского Государственного Университета, (77). </li>
+                <li>Даль, В. И. (2017). 1000 русских пословиц и поговорок.
+                    Добролюбов, Н. А. (n.d.). Русские пословицы и поговорки. </li>
+                <li>Жигулев, А. М. (1986). Русские народные пословицы и поговорки. Устинов “Удмуртия”. </li>
+                <li>Маслова, В. А. (2014). Новые русские пословицы: когнитивный и лингвокультурологический аспекты. Вестник Новгородского Государственного Университета, (77). </li>
+                <li>Мокиенко, В. М., Никитина, Т. Г., & Николаева, Е. К. (n.d.). Большой словарь русских пословиц. Санкт-Петербургский Государственный</li>
+                <li>Университет Межкафедральный Словарный Кабинет им. проф. Б.А.Ларина. </li>
+                <li>Федорова, Н.Н. (2007). Современный трансформации русских пословиц. Великий Новгород.</li>
+                <li>Фелицына, В.П., & Прохоров, Ю.Е. (1979). Русские пословицы, поговорки и крылатые выражения. Государственный институт русского языка им. А.С. Пушкина.</li>
+                <li>Frontend and backend web technologies in social networking sites: Facebook as an example. (2014, December 1). IEEE Conference Publication | IEEE Xplore. <a href="https://ieeexplore.ieee.org/abstract/document/7076874?casa_token=vkgS5LVwT5QAAAAA:pVzR5mD90TEeMGUFNiWyoUrCBQRJgFdz0hG9ikzMlTZ8MJHXqcXEaRTRKT2lBTw7GXSCyvNp0tnuNA ">Ссылка на источник</a></li>
+            </ol>
         </div>
     </div>
 </body>
