--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/img.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
@@ -45,7 +46,7 @@
             </li>
           </ul>
     </nav>
-    <div>
+    <div style="margin-bottom: 30px">
         <div class="d-flex pt-3 justify-content-center">
             <h2>Информация о нас</h2>
         </div>
@@ -60,7 +61,7 @@
                         <h5 class="card-title">Хамитов Есимгали</h5>
                         <p class="card-text mb-2">SE-2206</p>
                         <p class="card-text">Frontend разработчик</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text"><small class="text-muted">220752@astanait.edu.kz</small></p>
                     </div>
                   </div>
                 </div>
@@ -77,7 +78,7 @@
                         <h5 class="card-title">Хайруллин Алишер</h5>
                         <p class="card-text mb-2">SE-2207</p>
                         <p class="card-text">Backend разработчик</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text"><small class="text-muted">220974@astanait.edu.kz</small></p>
                     </div>
                   </div>
                 </div>
@@ -87,14 +88,14 @@
             <div class="card" style="max-width: 540px; min-width: 350px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="/zangar.jpg" class="img-fluid rounded-start" alt="Фото Есимгали">
+                    <img src="/photo_5397979795024893850_y.jpg" class="img-fluid rounded-start" alt="Фото Есимгали">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title">Жунисбек Зангар</h5>
                         <p class="card-text mb-2">SE-2207</p>
                         <p class="card-text">Frontend разработчик</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text"><small class="text-muted">220860@astanait.edu.kz</small></p>
                     </div>
                   </div>
                 </div>
